--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "bootstrap": "4.6",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
+    "preact": "^10.5.14",
+    "preact-custom-element": "^4.2.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
