--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "webpack-dev-server": "^3.11.2"
   }
 }
