--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aprooft",
   "private": true,
   "dependencies": {
+    "@jaames/iro": "^5.5.2",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
