--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "preact": "^10.5.14",
     "preact-custom-element": "^4.2.1",
     "preact-feather": "^4.2.1",
+    "prismjs": "^1.24.1",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
