--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "preact-custom-element": "^4.2.1",
     "preact-feather": "^4.2.1",
     "prismjs": "^1.24.1",
+    "react-feather": "^2.0.9",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
