--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@rails/webpacker": "5.4.0",
     "babel": "^6.23.0",
     "bootstrap": "4.6",
+    "chart.js": "^3.5.1",
+    "chartkick": "^4.0.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "preact": "^10.5.14",
