--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,5 +1,5 @@
 meta_product_name: "Aprooft"
 meta_title: "Aprooft - Market your products through the voice of your clients."
-meta_description: "Aprooft help you embed positive community contents on the product pages through a widget. Let existing customers convince potential customers to buy."
+meta_description: "Aprooft helps you to easily embed the voice of the community into your product page. With just a few clicks, add social proof to your website."
 meta_image: "seal.png" # should exist in `app/assets/images/`
 # twitter_account: "@product_twitter_account"   # required for Twitter Cards
