--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bootstrap": "4.6",
     "chart.js": "^3.5.1",
     "chartkick": "^4.0.5",
+    "clipboard-polyfill": "^3.0.3",
+    "clipboard.js": "^1.0.1",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "preact": "^10.5.14",
